# gigaam-multilingual-mlx

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml
benchmarks/: README.md  public-asr-perf-v1.json
benchmarks/manifests/: bond005--sova_rudevices.jsonl  google--fleurs.jsonl  istupakov--russian_librispeech.jsonl  quality-manifests.json
benchmarks/multilingual-v1/: README.md  run-context.json
benchmarks/multilingual-v1/manifests/: google--fleurs-en_us.jsonl  google--fleurs-kk_kz.jsonl  google--fleurs-ky_kg.jsonl  google--fleurs-ru_ru.jsonl  google--fleurs-uz_uz.jsonl  multilingual-manifests.json
benchmarks/multilingual-v1/performance/: kk_kz-5min.json  ky_kg-5min.json  ru_ru-5min.json  uz_uz-5min.json
docs/: benchmark-multilingual-v1.json  benchmark-multilingual-v1.md  benchmark-v0.1.0.json  benchmark-v0.1.0.md  server.md  server.ru.md
src/gigaam_mlx/: audio.py  cli.py  config.py  convert.py  dev_cli.py  normalization.py  outputs.py  pytorch_benchmark.py  quantization.py
src/gigaam_multilingual_mlx/: __init__.py  artifacts.py  audio.py  cli.py  convert.py  dev_cli.py  evaluate.py  model.py  multilingual_benchmark.py  normalization.py  openai_schema.py  outputs.py  parakeet_benchmark.py  parity.py  pytorch_benchmark.py  quantization.py  reports.py  server.py  service.py  whisper_benchmark.py
tests/: test_artifacts.py  test_audio.py  test_cli.py  test_evaluate.py  test_openai_schema.py  test_outputs.py  test_server.py
tools/: build_multilingual_perf_corpus.py  build_multilingual_report.py  build_public_perf_corpus.py  build_release_report.py  export_multilingual_manifests.py  export_quality_manifests.py  prepare_fleurs_multilingual.py  prepare_hf_release.py  run_multilingual_quality.py  run_multilingual_whisper_matrix.py  run_parakeet_benchmark.py  run_parakeet_quality.py  run_whisper_benchmark.py
